gccida/c3/choose_reload_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5807:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v35; // [rsp+78h] [rbp-698h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5808:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type when_needed; // [rsp+7Ch] [rbp-694h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5832:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode need_mode; // [rsp+10Ch] [rbp-604h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5834:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class last_class; // [rsp+11Ch] [rbp-5F4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5835:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+120h] [rbp-5F0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5836:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+124h] [rbp-5ECh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5845:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class group_class; // [rsp+6F0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5872:61: error: ISO C requires a named parameter before '...'
specqsort( ( char *)reload_order, n_reloads, 2, ( int ( *)( ...))reload_reg_class_lower); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5909:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
byte = ( int)rld[r].in_reg[1]; 
             ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5921:32: error: use of undeclared identifier 'machine_mode'
i += subreg_regno_offset( i, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)last_reg), byte, mode); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5921:47: error: expected expression
i += subreg_regno_offset( i, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)last_reg), byte, mode); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5923:68: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
need_mode = byte ? smallest_mode_for_size( byte + mode_size[mode], mode_class_0[mode]) : mode; 
                                                                   ^~~~~~~~~~~~
                                                                   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5981:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[r].mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:5982:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v43 = mode_class_0[rld[r].mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:6074:63: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v38 = ( unsigned __int16)**( _DWORD **)&insn[2] == 47 ? ( rtx)insn[2] : single_set_2( insn, *( rtx *)&insn[2]); 
                                                              ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:6092:36: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
search_equiv = (  struct rtx_def *)v37[1]; 
                                   ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:6108:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 5670, "choose_reload_regs"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:6221:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[r].mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/reload1.c:6222:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = mode_class_0[rld[r].mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_reload_regs/src/obj/reload1.o] Error 1
